goit-markup-hw-03

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <!-- ==============================================HERO=================================== -->
 	<main>
 		<section class="hero">
-			<div class="hero-conteiner conteiner">
+			<div class="conteiner hero-conteiner">
 			<h1 class="main-title">Effective Solutions for Your Business</h1>
 			<button class="hero-button" type="button">Order Service</button>
 		</div>
@@ -56,7 +56,7 @@
 
 <!-- =============================================ABOUT==================================== -->
 
-		<section class="about section">
+		<section class="about-section">
 			<div class="conteiner">
 			<h2 class="hidden-header" hidden>about</h2>
 			<ul class="list-about list">
@@ -102,34 +102,42 @@
 <!-- ====================================WORK============================================== -->
 
 <!-- ===================================TEAM=============================================== -->
-         <section class="ourteam section">
-				<div class="conteiner">
-				<h2 class="subtitle-ourteam">Our Team</h2>
-				<ul class="menu-ourteam list"> 
-					<li class="galary-ourteam list">
-						<img src="./images/team/mark-guerrero.jpg" alt="mark-guerrero" width="264">
-						<h3 class="emploer">Mark Guerrero</h3>
-						<p class="position-emploer">Product Designer</p>
-					</li>
-					<li class="galary-ourteam list">
-						<img src="./images/team/tom-ford.jpg" alt="tom-ford" width="264">
-						<h3 class="emploer">Tom Ford</h3>
-						<p class="position-emploer">Frontend Developer</p>
-					</li>
-					<li class="galary-ourteam list">
-						<img src="./images/team/camila-garcia.jpg" alt="camila-garcia" width="264">
-						<h3 class="emploer">Camila Garcia</h3>
-						<p class="position-emploer">Marketing</p>
-					</li>
-					<li class="galary-ourteam list">
-						<img src="./images/team/daniel-wilson.jpg" alt="daniel-wilson" width="264">
-						<h3 class="emploer">Daniel Wilson</h3>
-						<p class="position-emploer">UI Designer</p>
-					</li>
-				</ul>
-			</div>
-			</section>
-	</main>
+ <section class="ourteam-section">
+	<div class="conteiner">
+		<h2 class="subtitle-ourteam">Our Team</h2>
+			<ul class="menu-ourteam list"> 
+				<li class="galary-ourteam list">
+					<img src="./images/team/mark-guerrero.jpg" alt="mark-guerrero" width="264">
+					<div class="emploer-conteiner">
+					<h3 class="emploer">Mark Guerrero</h3>
+					<p class="position-emploer">Product Designer</p>
+				   </div>
+				</li>
+				<li class="galary-ourteam list">
+					<img src="./images/team/tom-ford.jpg" alt="tom-ford" width="264">
+					<div class="emploer-conteiner">
+					<h3 class="emploer">Tom Ford</h3>
+					<p class="position-emploer">Frontend Developer</p>
+				   </div>
+				</li>
+				<li class="galary-ourteam list">
+					<img src="./images/team/camila-garcia.jpg" alt="camila-garcia" width="264">
+					<div class="emploer-conteiner">
+					<h3 class="emploer">Camila Garcia</h3>
+					<p class="position-emploer">Marketing</p>
+				   </div>
+				</li>
+				<li class="galary-ourteam list">
+					<img src="./images/team/daniel-wilson.jpg" alt="daniel-wilson" width="264">
+					<div class="emploer-conteiner">
+					<h3 class="emploer">Daniel Wilson</h3>
+					<p class="position-emploer">UI Designer</p>
+				   </div>
+				</li>
+			</ul>
+	</div>
+ </section>
+</main>
 <!-- ===========================================TEAM=============================================== -->
 	<footer class="footer-title">
 	<div class="conteiner footer-section">
