--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 	<header class="page-header-content">
-		<div class="conteiner page-header-conteiner">
+		<div class="container page-header-conteiner">
 <!-- =============================================MENUNAV================================== -->
 		<nav class="page-nav">
 		<a class="logo link" href="./index.html">Web<span class="header-logo">Studio</span></a>
@@ -47,7 +47,7 @@
 <!-- ==============================================HERO=================================== -->
 	<main>
 		<section class="hero">
-			<div class="conteiner hero-conteiner">
+			<div class="container hero-conteiner">
 			<h1 class="main-title">Effective Solutions for Your Business</h1>
 			<button class="hero-button" type="button">Order Service</button>
 		</div>
@@ -57,7 +57,7 @@
 <!-- =============================================ABOUT==================================== -->
 
 		<section class="about-section">
-			<div class="conteiner">
+			<div class="container">
 			<h2 class="hidden-header" hidden>about</h2>
 			<ul class="list-about list">
 				<li class="menu-discription-about">
@@ -83,7 +83,7 @@
 <!-- ===============================================WORK========================================= -->
 
 			<section class="section-work">
-				<div class="conteiner">
+				<div class="container">
 				<h2 class="subtitle-work">What are we doing</h2>
 				<ul class="menu-work-list list">
 					<li class="galary-work-list list">
@@ -103,7 +103,7 @@
 
 <!-- ===================================TEAM=============================================== -->
  <section class="ourteam-section">
-	<div class="conteiner">
+	<div class="container">
 		<h2 class="subtitle-ourteam">Our Team</h2>
 			<ul class="menu-ourteam list"> 
 				<li class="galary-ourteam list">
@@ -140,7 +140,7 @@
 </main>
 <!-- ===========================================TEAM=============================================== -->
 	<footer class="footer-title">
-	<div class="conteiner footer-section">
+	<div class="container footer-section">
 		<a class="footer-link logo link" href="./index.html">Web<span class="footer-logo">Studio</span></a>
 		<p class="fotter-discription">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 	</div>
