--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
 <link rel="stylesheet" href="./css/style.css">
 <body>
 	<header class="page-header-content">
-		<div class="conteiner page-header-conteiner">
+		<div class="container page-header-conteiner">
 <!-- ====================================================MENUNAV=============================== -->
 		<nav class="page-nav">
 			<a class="logo link" href="./portfolio.html">Web<span class="header-logo">Studio</span></a>
@@ -47,7 +47,7 @@
 <!-- ==================================================ALL SERVISES============================= -->
 	<main>
 <section class="galary">
-	<div class="conteiner">
+	<div class="container">
 	<h1 class="hidden-header" hidden>Galery</h1>
 	<ul class="button-list list">
 		<li class="galary-menu"><button class="galary-button" type="button">All</button>
@@ -141,7 +141,7 @@
 <!-- ===========================================ALL SERVISES===================================== -->
 	</main>
 	<footer class="footer-title">
-		<div class="conteiner footer-section">
+		<div class="container footer-section">
 		<a class="footer-link logo link" href="./portfolio.html">Web<span class="footer-logo">Studio</span></a>
 		<p class="fotter-discription">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 	</div>
